third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/max-align.stderr
error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> tests/ui-msrv/max-align.rs:96:11
   |
96 | #[repr(C, align(1073741824))]
   |           ^^^^^^^^^^^^^^^^^
